--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,81 +1,3 @@
 {
-  "CONNECTION_ERROR_MSG": "Please Check your internet connection",
-  "TEXT_DESCRYPTION" : "Descryption" ,
-  "COMMERCIAL_DESCRYPTION" : " Choose lines with total subscription of ",
-  "COMMERCIAL_DESCRYPTION2" : "Reach your customers and promote your business with free advertising sms",
-  "EGP":"EGP",
-  "COMMERCIAL_DESCRYPTION3" : "Reaching your customers and promoting your business has never been easier. Now when purchasing your preferred number of dials you will get number of free advertising SMS based on your commitment from the below options  ",
-  "CONNECT_DESCRYPTION3":"Always stay online, now you can purchase your preferred number of dials and based on your commitment from the below options you can stay connected by getting your VDSL or MBB gift  ",
-  "CASHLESS_DESCRYPTION3" : "You can now manage your company’s payroll with zero cash-out fees for your employees with Etisalat Cash. Purchase your preferred dials and choose from the below options the suitable package for your company  ",
-  "COMMERCIAL_TITLE":"Commercial" ,
-  "CONNECT_DESCRYPTION" : "Choose lines with total subscription of",
-  "CONNECT_DESCRYPTION2" : "Stay connected and get your free MBB or VDSL services now  ",
-  "CONNECT_TITLE":"Connect" ,
-  "CASHLESS_DESCRYPTION" : "Choose lines with total subscription of",
-  "CASHLESS_DESCRYPTION2" : "Manage your payroll with zero cash out fees from Etisalat Cash",
-  "CASHLESS_TITLE":"Cashless" ,
-  "PROCESS":"Proceed",
-  "CHOOSE_DIALS" : "choose Dials",
-  "CHOOSE_YOUR_GIFT" : "You will soon enjoy your gift",
-  "CREATE_ACCOUNT":"Create Account",
-  "CREARE_YOUR_ACCOUNT":"Create your account",
-  "ENTER_INFO":"Enter your company's info and you mobile number , this mobile number will be the SPOC dial for communication and receiving notifications",
-  "NAME_BD":"Name",
-  "MOBILE":"Mobile Number",
-  "COMPANY_NAME":"Company Name",
-  "NATIONAL_ID":"National ID",
-  "COMPANY_ADDRESS":"Company Address",
-  "TYPE_OF_INDUSTRY":"Type of Industry",
-  "TYPE_OF_DOCUMENTS":"Type of Documents",
-  "NUMBER_OF_EMPLOYEES": "Number of Employees",
-  "SELECT":"Select" ,
-  "REQUESTED_DOCUMENTS":"Requested Documents",
-  "DIALS":"Dials",
-  "CHOOSE_YOUR_DIAL_TYPES":"Choose your dial type",
-  "GET_DIALS":"GET DIALS",
-  "INFO_1":"If you enter *222* , you will get all numbers including 222",
-  "INFO_2":"If you enter 222 , you will get all numbers starting 222",
-  "INFO_3":"If you enter *222 , you will get all numbers ending 222",
-  "SELECT_DIALS":"Select Dials",
-  "DELIVERY_METHOD":"Delivery Method",
-  "CHOOSE_DELIVERY_METHOD":"Choose your delivery method",
-  "DELIVERY_MTHOD_INFO":"To receive your SIM Cards & contract , you can Choose your suitable delivery method , either through courier for free or from any Etisalat store",
-  "REATAI":"Retail",
-  "COURIER":"Courier",
-  "SUBMIT_BD":"submit",
-  "ERROE-MAX-MESSAGE":"*You have reached the maximum amount of dails",
-  "PROCESS_SUCCESS":"Process successful Your Order number is",
-  "COPY_NUMBER":"Please copy your SR number",
-  "PROCESS_FAILED":"Process failed please try again",
-  "NAME_VALIDATE":"Username length must be between 7 and 30 characters",
-  "MOBILE_VLIDATE":"Please enter valid dial",
-  "COMPANY_NAME_VALIDATE":"please enter data ",
-  "NATIONAL_ID_VALIDATE":"Please enter valid national ID",
-  "COMPANY_ADDRESS_VALIDATE":"Company address length must be between 15 and 100 characters",
-  "IMAGES_ONLY":" Note : Only files that are allowed from the image type jpg ,jpeg , png ",
-  "TRACK_ORDER":"Track Order",
-  "TRACKING_NUM" : "Tracking Number is" ,
-  "REQ_PLACED" : "Request Placed",
-  "REQ_IS_BEING_REVISED" :"Request is being revised",
-  "ORDER_IS_ON_WAY" : "Your Order is on the way ",
-  "ORDER_RECEIVED" : "Order received",
-  "EDIT_DIALS":"Edit dials",
-  "EMERALD_TITLE" : "Emerald" , 
-  "HEKAYA_TITLE" : "Hekaya",
-  "HOME_PAGE_FRIST_DESCRIPTION":"Buy your Dials & Choose your Gift",
-  "HOME_PAGE_SECOND_DESCRIPTION" : "Pick the Pack that suits your company",
-  "ON_NET_MINS":"On Net Minutes ",
-  "CROSS_NET_MINS":"Cross NetMinutes ",
-  "MOBILE_INTERNET":"Mobile Internet ",
-  "SMS":"SMS ",
-  "INTERNATIONAL_MINS":"International Mins ",
-  "ROAMING_MINS":"Roaming Receiving Mins ",
-  "INTERNET_WHILE_ROAMING":"Internet While Roaming ",
-  "ANNUAL_GIFTS" :"Annual Gift ",
-  "VOICE_AND_SMS_UNITS":"Voice And SMS Units",
-  "MOBILE_H":"Mobile Internet",
-  "INTRA_COMPANY":"Intra Company "
-  
-
-
+  "CONNECTION_ERROR_MSG": "Please Check your internet connection"
 }
