--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,5 @@
 {
-  "CONNECTION_ERROR_MSG": "غير متصل بالانترنت"
- 
+	"Course Description*": "وصف الكورس",
+	"General Information": "معلومات عامة",
+	"Login": "تسجيل الدخول"
 }
