mod create course, add chapter, add lecture pages

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,5 +1,5 @@
 {
-	"Course Description*": "وصف الكورس",
+	"Explore our schools to find your perfect course": "Explore our schools to find your perfect course",
 	"General Information": "معلومات عامة",
 	"Login": "تسجيل الدخول"
 }
