--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -2,6 +2,7 @@
 	" *Please enter a valid description": " *Please enter a valid description",
 	" *Please enter a valid sort": " *Please enter a valid sort",
 	" Choose file - (Pdf, Video)": " Choose file - (Pdf, Video)",
+	" EGP?": " EGP?",
 	" Price": " Price",
 	"'Students who watch a well-made promo video are 5X more likely to enroll in your course": {
 		" We've seen that statistic go up to 10X for exceptionally awesome videos": {
@@ -26,12 +27,28 @@
 		}
 	},
 	"*Please enter a valid Course Title": "*Please enter a valid Course Title",
+	"*Please enter a valid Email (ex": {
+		" example@gmail": {
+			"com": "*Please enter a valid Email (ex. example@gmail.com"
+		}
+	},
+	"*Please enter a valid Mobile (ex": {
+		" 01xxxxxxxxx)": "*Please enter a valid Mobile (ex. 01xxxxxxxxx)"
+	},
 	"*Please enter a valid course description": "*Please enter a valid course description",
 	"*Please enter a valid course title": "*Please enter a valid course title",
+	"*Please enter a valid first name (ex": {
+		" Hossam)": "*Please enter a valid first name (ex. Hossam)"
+	},
+	"*Please enter a valid last name (ex": {
+		" Elkashef)": "*Please enter a valid last name (ex. Elkashef)"
+	},
 	"*Please enter a valid lecture title": "*Please enter a valid lecture title",
+	"*Please enter a valid password (minimum length = 8 characters)": "*Please enter a valid password (minimum length = 8 characters)",
 	"*Please enter chapter Title": "*Please enter chapter Title",
 	"*Please enter description": "*Please enter description",
 	"*Please enter price": "*Please enter price",
+	"*Please enter select your account type (student, instructor?)": "*Please enter select your account type (student, instructor?)",
 	"*Please enter sort": "*Please enter sort",
 	"*Please select a course": "*Please select a course",
 	"*Please select chapter": "*Please select chapter",
@@ -42,37 +59,66 @@
 	"*Please select lecture File": "*Please select lecture File",
 	"*Please select promo video": "*Please select promo video",
 	"*Please select subject": "*Please select subject",
+	"": {
+		" All Rights Reserved": {
+			"": ". All Rights Reserved."
+		}
+	},
 	"About": "About",
+	"About Us": "About Us",
+	"Accept": "Accept",
+	"Account created": "Account created",
 	"Action": "Action",
+	"Activated Successfully": "Activated Successfully",
+	"Active": "Active",
+	"Active Course": "Active Course",
 	"Active Courses": "Active Courses",
 	"Add Chapter": "Add Chapter",
 	"Add Course": "Add Course",
 	"Add Lecture": "Add Lecture",
+	"Add New Chapter": "Add New Chapter",
 	"Add New Course": "Add New Course",
 	"Add lectures": "Add lectures",
 	"Add to Cart": "Add to Cart",
 	"Added to cart": "Added to cart",
 	"All Courses": "All Courses",
+	"All Rights Reserved": "All Rights Reserved",
+	"Already have an account?": "Already have an account?",
 	"Another Courses": "Another Courses",
+	"Approve": "Approve",
 	"Approved": "Approved",
 	"Arabic": "Arabic",
 	"Are You Sure?": "Are You Sure?",
+	"Are you sure you want to Approve this course? ": "Are you sure you want to Approve this course? ",
+	"Are you sure you want to Approve this instructor? ": "Are you sure you want to Approve this instructor? ",
+	"Are you sure you want to Approve this payment of ": "Are you sure you want to Approve this payment of ",
+	"Are you sure you want to Reject this payment of ": "Are you sure you want to Reject this payment of ",
 	"Are you sure you want to delete this chapter?": "هل تريد ازالة هذا الشابتر؟",
+	"Are you sure you want to reject this course? ": "Are you sure you want to reject this course? ",
+	"Are you sure you want to reject this instructor? ": "Are you sure you want to reject this instructor? ",
 	"Are you sure you want to remove all chapters?": "Are you sure you want to remove all chapters?",
 	"Back": "Back",
-	"Back to courses": "Back to courses",
+	"Back to Home": "Back to Home",
+	"Back to home": "Back to home",
 	"By": "By",
+	"By signing up, you agree to our": "By signing up, you agree to our",
 	"Cancel": "Cancel",
 	"Chapter": "Chapter",
 	"Chapter Description*": "Chapter Description*",
+	"Chapter Name": "Chapter Name",
 	"Chapter Title*": "Chapter Title*",
 	"Chapters": "Chapters",
 	"Checkout": "Checkout",
 	"Confirm": "Confirm",
 	"Confirm Checkout": "Confirm Checkout",
+	"Contact Information": "Contact Information",
+	"Contact Us": "Contact Us",
 	"Controls": "Controls",
+	"Copyright Policy": "Copyright Policy",
 	"Course": "Course",
+	"Course Confirmation": "Course Confirmation",
 	"Course Description*": "Course Description*",
+	"Course Name": "Course Name",
 	"Course Subtitle*": "Course Subtitle*",
 	"Course Title*": "Course Title*",
 	"Course content": "Course content",
@@ -82,12 +128,17 @@
 	"Courses Content": "Courses Content",
 	"Cover Image": "Cover Image",
 	"Create New Course": "Create New Course",
+	"Cursus": "Cursus",
 	"Dashboard": "Dashboard",
+	"Deactivated Successfully": "Deactivated Successfully",
 	"Description": "Description",
+	"Don't have an account?": "Don't have an account?",
 	"Draft": "Draft",
 	"Duration": "Duration",
 	"EGP": "EGP",
 	"Edit Course ": "Edit Course ",
+	"Email": "Email",
+	"Email Address": "Email Address",
 	"English": "English",
 	"Error while creating chapter, please try again": "Error while creating chapter, please try again",
 	"Error while creating course, please try again": "Error while creating course, please try again",
@@ -98,12 +149,19 @@
 	"Error while update lecture, please try again": "Error while update lecture, please try again",
 	"Explore our schools to find your perfect course": "Explore our schools to find your perfect course",
 	"File not supported": "File not supported",
+	"Forgot Password": "Forgot Password",
 	"General Information": "معلومات عامة",
+	"Get Started": "Get Started",
 	"Go to home": "Go to home",
 	"Grade 1": "Grade 1",
 	"Grade 2": "Grade 2",
 	"Grade 3": "Grade 3",
 	"Grades*": "Grades*",
+	"Home": "Home",
+	"Instractor Name": "Instractor Name",
+	"Instractors Request List": "Instractors Request List",
+	"Instructor Dashboard": "Instructor Dashboard",
+	"Invalid reset password link": "Invalid reset password link",
 	"Item No": {
 		"": "Item No."
 	},
@@ -120,27 +178,51 @@
 			}
 		}
 	},
+	"Log In": "Log In",
+	"Log In to Your Account": "Log In to Your Account",
 	"Log in": "Log in",
 	"Login": "تسجيل الدخول",
+	"Match your goals to our classes, explore your options, and map out your path to success": {
+		"": "Match your goals to our classes, explore your options, and map out your path to success."
+	},
 	"Math": "Math",
+	"Menu": "Menu",
 	"Minutes": "Minutes",
+	"My Courses": "My Courses",
+	"My Dashboard": "My Dashboard",
+	"New": "New",
 	"Newest Courses": "Newest Courses",
 	"Next": "Next",
 	"No": "No",
 	"Order Details": "Order Details",
 	"Order Summary": "Order Summary",
+	"Password changed successfully": "Password changed successfully",
 	"Pending": "Pending",
+	"Pending Course": "Pending Course",
 	"Pending Courses": "Pending Courses",
+	"Phone No": "Phone No",
 	"Physics": "Physics",
+	"Please Confirm?": "Please Confirm?",
+	"Please enter a valid mobile number or email": "Please enter a valid mobile number or email",
+	"Please enter valid Email or Mobile, and password": "Please enter valid Email or Mobile, and password",
 	"Please select subject": "Please select subject",
+	"Please try again": "Please try again",
 	"Preview this course": "Preview this course",
+	"Price": "Price",
+	"Privacy Policy": "Privacy Policy",
 	"Promotional Video": "Promotional Video",
 	"Publish Date": "Publish Date",
+	"Refresh table": "Refresh table",
+	"Reject": "Reject",
 	"Rejected": "Rejected",
 	"Remove All": "Remove All",
 	"Request a Password Reset": "Request a Password Reset",
+	"Reset My Password": "Reset My Password",
 	"Reset Password": "Reset Password",
+	"Reset Your Password": "Reset Your Password",
+	"Reset link Sent, Please Check Your mail": "Reset link Sent, Please Check Your mail",
 	"Science": "Science",
+	"Search": "Search",
 	"Secure checkout": "Secure checkout",
 	"See all": "See all",
 	"Select Chapter": "Select Chapter",
@@ -151,12 +233,17 @@
 	"Shopping cart": "Shopping cart",
 	"Sign In": "Sign In",
 	"Sign Out": "Sign Out",
+	"Sign Up": "Sign Up",
+	"Sign Up and Start Learning!": "Sign Up and Start Learning!",
+	"Smart Academy": "Smart Academy",
 	"Sorry your link is expired, please contact the administrator": {
 		"": "Sorry your link is expired, please contact the administrator."
 	},
 	"Sort": "Sort",
 	"Status": "Status",
 	"Student Dashboard": "Student Dashboard",
+	"Student Name": "Student Name",
+	"Student Payment": "Student Payment",
 	"Students who watch a well-made promo video are 5X more likely to enroll in your course": {
 		" We've seen that statistic go up to 10X for exceptionally awesome videos": {
 			" Learn how to make yours awesome!": "Students who watch a well-made promo video are 5X more likely to enroll in your course. We've seen that statistic go up to 10X for exceptionally awesome videos. Learn how to make yours awesome!"
@@ -164,10 +251,15 @@
 	},
 	"Subjects*": "Subjects*",
 	"Submit for Review": "Submit for Review",
+	"Terms": "Terms",
+	"Terms of Use": "Terms of Use",
 	"Thank You": "Thank You",
 	"Title": "Title",
 	"Total Chapters": "Total Chapters",
 	"Total Cost": "Total Cost",
+	"Total Courses": "Total Courses",
+	"Total Sales": "Total Sales",
+	"Total Students": "Total Students",
 	"Unexpected error occurred, please try again": "Unexpected error occurred, please try again",
 	"Upload Video or File*": "Upload Video or File*",
 	"Upload your course image here": {
@@ -187,25 +279,54 @@
 			}
 		}
 	},
-	"User Name or Password incorrect, please try again": "User Name or Password incorrect, please try again",
 	"View Saved Chapters": "View Saved Chapters",
 	"View Saved Lecture": "View Saved Lecture",
+	"Welcome Back": "Welcome Back",
+	"Welcome to Smart Academy": "Welcome to Smart Academy",
 	"You account has beed activated successfully, please login": {
 		"": "You account has beed activated successfully, please login."
 	},
+	"You account has been created successfully, please check your mail to active your account": {
+		"": "You account has been created successfully, please check your mail to active your account."
+	},
+	"You are not authorized to view this Url": "You are not authorized to view this Url",
 	"Your browser does not support the video tag": {
 		"": "Your browser does not support the video tag."
 	},
 	"Your order submitted successfully": "Your order submitted successfully",
+	"and": "and",
+	"arabic": "arabic",
 	"cancel": "cancel",
 	"cancel edit": "cancel edit",
+	"chapter name:": "chapter name:",
 	"chapters": "chapters",
+	"confirm": "confirm",
+	"course name:": "course name:",
+	"departments": "departments",
+	"email": "email",
+	"first Name": "first Name",
 	"hours": "hours",
+	"instructor": "instructor",
+	"instructor mobile number:": "instructor mobile number:",
+	"instructor name:": "instructor name:",
+	"last Name": "last Name",
 	"lecture": "lecture",
 	"lectures": "lectures",
+	"math": "math",
+	"nstructors Request List": "nstructors Request List",
+	"password": "password",
+	"password doesn't match": "password doesn't match",
+	"phone number": "phone number",
+	"please enter a valid mail": "please enter a valid mail",
+	"please enter a valid password, min 8 characters": "please enter a valid password, min 8 characters",
+	"sign Up": "sign Up",
+	"sign Up as": "sign Up as",
+	"student": "student",
+	"student mobile number:": "student mobile number:",
+	"student name:": "student name:",
+	"table of content ": "table of content ",
 	"this chapter contains lectures, can't be deleted": "this chapter contains lectures, can't be deleted",
 	"this course contains chapters, can't be deleted": "this course contains chapters, can't be deleted",
-	"user created": "user created",
 	"you are logged in successfully": "you are logged in successfully",
 	"your chapter successfully created, congratulations!": "your chapter successfully created, congratulations!",
 	"your chapter successfully updated, congratulations!": "your chapter successfully updated, congratulations!",
