update 	*for testing issues* 	adding comments to issues file and fix issues from my side
	*all updates below are not testing issues *
	-improve edit course UX and check if promo and cover was null from the API res, (always null)
	-improve study page UX by adding loading indicator while loading video from Vimeo
	-protect study page and close it immediately if the API returns an empty array of chapters or course not found

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -64,6 +64,9 @@
 			"": ". All Rights Reserved."
 		}
 	},
+	"1st": "1st",
+	"2nd": "2nd",
+	"3rd": "3rd",
 	"About": "About",
 	"About Us": "About Us",
 	"Accept": "Accept",
@@ -78,7 +81,6 @@
 	"Add Lecture": "Add Lecture",
 	"Add New Chapter": "Add New Chapter",
 	"Add New Course": "Add New Course",
-	"Add lectures": "Add lectures",
 	"Add to Cart": "Add to Cart",
 	"Added to cart": "Added to cart",
 	"All Courses": "All Courses",
@@ -205,13 +207,13 @@
 	"Please Confirm?": "Please Confirm?",
 	"Please enter a valid mobile number or email": "Please enter a valid mobile number or email",
 	"Please enter valid Email or Mobile, and password": "Please enter valid Email or Mobile, and password",
+	"Please select a lecture": "Please select a lecture",
 	"Please select subject": "Please select subject",
 	"Please try again": "Please try again",
 	"Preview this course": "Preview this course",
 	"Price": "Price",
 	"Privacy Policy": "Privacy Policy",
 	"Promotional Video": "Promotional Video",
-	"Publish Date": "Publish Date",
 	"Refresh table": "Refresh table",
 	"Reject": "Reject",
 	"Rejected": "Rejected",
@@ -251,6 +253,7 @@
 	},
 	"Subjects*": "Subjects*",
 	"Submit for Review": "Submit for Review",
+	"Table of content": "Table of content",
 	"Terms": "Terms",
 	"Terms of Use": "Terms of Use",
 	"Thank You": "Thank You",
@@ -289,6 +292,7 @@
 	"You account has been created successfully, please check your mail to active your account": {
 		"": "You account has been created successfully, please check your mail to active your account."
 	},
+	"You are not allowed to view this video or an error occurred, please try again": "You are not allowed to view this video or an error occurred, please try again",
 	"You are not authorized to view this Url": "You are not authorized to view this Url",
 	"Your browser does not support the video tag": {
 		"": "Your browser does not support the video tag."
@@ -301,17 +305,23 @@
 	"chapter name:": "chapter name:",
 	"chapters": "chapters",
 	"confirm": "confirm",
+	"count": "count",
 	"course name:": "course name:",
+	"create Date": "create Date",
 	"departments": "departments",
 	"email": "email",
+	"fee": "fee",
 	"first Name": "first Name",
 	"hours": "hours",
 	"instructor": "instructor",
 	"instructor mobile number:": "instructor mobile number:",
 	"instructor name:": "instructor name:",
+	"language": "language",
 	"last Name": "last Name",
 	"lecture": "lecture",
 	"lectures": "lectures",
+	"level": "level",
+	"m": "m",
 	"math": "math",
 	"nstructors Request List": "nstructors Request List",
 	"password": "password",
@@ -321,10 +331,10 @@
 	"please enter a valid password, min 8 characters": "please enter a valid password, min 8 characters",
 	"sign Up": "sign Up",
 	"sign Up as": "sign Up as",
+	"sort": "sort",
 	"student": "student",
 	"student mobile number:": "student mobile number:",
 	"student name:": "student name:",
-	"table of content ": "table of content ",
 	"this chapter contains lectures, can't be deleted": "this chapter contains lectures, can't be deleted",
 	"this course contains chapters, can't be deleted": "this course contains chapters, can't be deleted",
 	"you are logged in successfully": "you are logged in successfully",
