--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,6 @@
 {
 	" *Please enter a valid description": " *Please enter a valid description",
-	" *Please enter a valid sort": " *Please enter a valid sort",
-	" Choose file - (Pdf, Video)": " Choose file - (Pdf, Video)",
+	" *Please enter a valid sort (1-100)": " *Please enter a valid sort (1-100)",
 	" EGP?": " EGP?",
 	" Price": " Price",
 	"'Students who watch a well-made promo video are 5X more likely to enroll in your course": {
@@ -49,7 +48,7 @@
 	"*Please enter description": "*Please enter description",
 	"*Please enter price": "*Please enter price",
 	"*Please enter select your account type (student, instructor?)": "*Please enter select your account type (student, instructor?)",
-	"*Please enter sort": "*Please enter sort",
+	"*Please enter sort (1-100)": "*Please enter sort (1-100)",
 	"*Please select a course": "*Please select a course",
 	"*Please select chapter": "*Please select chapter",
 	"*Please select course": "*Please select course",
@@ -68,7 +67,6 @@
 	"2nd": "2nd",
 	"3rd": "3rd",
 	"About": "About",
-	"About Us": "About Us",
 	"Accept": "Accept",
 	"Account created": "Account created",
 	"Action": "Action",
@@ -86,7 +84,6 @@
 	"All Courses": "All Courses",
 	"All Rights Reserved": "All Rights Reserved",
 	"Already have an account?": "Already have an account?",
-	"Another Courses": "Another Courses",
 	"Approve": "Approve",
 	"Approved": "Approved",
 	"Arabic": "Arabic",
@@ -108,6 +105,7 @@
 	"Chapter": "Chapter",
 	"Chapter Description*": "Chapter Description*",
 	"Chapter Name": "Chapter Name",
+	"Chapter Title": "Chapter Title",
 	"Chapter Title*": "Chapter Title*",
 	"Chapters": "Chapters",
 	"Checkout": "Checkout",
@@ -192,10 +190,10 @@
 	"Minutes": "Minutes",
 	"My Courses": "My Courses",
 	"My Dashboard": "My Dashboard",
-	"New": "New",
 	"Newest Courses": "Newest Courses",
 	"Next": "Next",
 	"No": "No",
+	"No result found": "No result found",
 	"Order Details": "Order Details",
 	"Order Summary": "Order Summary",
 	"Password changed successfully": "Password changed successfully",
@@ -299,20 +297,18 @@
 	},
 	"Your order submitted successfully": "Your order submitted successfully",
 	"and": "and",
-	"arabic": "arabic",
 	"cancel": "cancel",
 	"cancel edit": "cancel edit",
 	"chapter name:": "chapter name:",
 	"chapters": "chapters",
 	"confirm": "confirm",
 	"count": "count",
+	"course Title": "course Title",
 	"course name:": "course name:",
 	"create Date": "create Date",
-	"departments": "departments",
 	"email": "email",
 	"fee": "fee",
 	"first Name": "first Name",
-	"hours": "hours",
 	"instructor": "instructor",
 	"instructor mobile number:": "instructor mobile number:",
 	"instructor name:": "instructor name:",
@@ -322,7 +318,6 @@
 	"lectures": "lectures",
 	"level": "level",
 	"m": "m",
-	"math": "math",
 	"nstructors Request List": "nstructors Request List",
 	"password": "password",
 	"password doesn't match": "password doesn't match",
@@ -332,11 +327,14 @@
 	"sign Up": "sign Up",
 	"sign Up as": "sign Up as",
 	"sort": "sort",
+	"sort ": "sort ",
 	"student": "student",
 	"student mobile number:": "student mobile number:",
 	"student name:": "student name:",
 	"this chapter contains lectures, can't be deleted": "this chapter contains lectures, can't be deleted",
 	"this course contains chapters, can't be deleted": "this course contains chapters, can't be deleted",
+	"time m": "time m",
+	"you Don't have any chapters in this course to view": "you Don't have any chapters in this course to view",
 	"you are logged in successfully": "you are logged in successfully",
 	"your chapter successfully created, congratulations!": "your chapter successfully created, congratulations!",
 	"your chapter successfully updated, congratulations!": "your chapter successfully updated, congratulations!",
